# aoc2021

./: .gitignore  README.md  aoc.sh  format.sh
day01.1/: Day1.hs  day1.hs
day01.2/: Day1.hs  day1.hs
day02.1/: Day2.hs  Makefile
day02.2/: Day2.cabal  Makefile
day02.2/app/: Main.hs
day03.1/: Day3.cabal  Makefile
day03.1/app/: Main.hs
day03.2/: Day3.cabal
day03.2/app/: Main.hs
day04.1/: Day4.cabal  Makefile
day04.1/app/: Main.hs
day04.2/app/: Main.hs
day05.1/: Day5.cabal  Makefile
day05.1/app/: Main.hs
day05.2/app/: Main.hs
day06.1/src/: Aoc.hs
day06.2/: Day6.cabal  Makefile
day06.2/app/: Main.hs
day06.2/src/: Aoc.hs
day07.1/: Day7.cabal  Makefile
day07.1/app/: Main.hs
day07.1/src/: Aoc.hs
day07.2/app/: Main.hs
day07.2/src/: Aoc.hs
day08.1/: Day8.cabal
day08.1/app/: Main.hs
day08.1/src/: Aoc.hs
day08.2/: Makefile  scratch.txt
day08.2/app/: Main.hs
day08.2/src/: Aoc.hs
day09.1/: Day9.cabal  Makefile
day09.1/app/: Main.hs
day09.1/src/: Aoc.hs
template/: Day.mustache  Lib.mustache  Makefile.mustache  deps.txt
